manifests/homeops/zwaveadmin/base/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zwaveadmin
  namespace: homeops
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zwaveadmin
  ingress:
    - fromEntities:
        - ingress
        - remote-node
      toPorts:
        - ports:
            - port: "4433"  # OAuth2Proxy
            - port: "8091"        
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: homeassist
      toPorts:
        - ports:
            - port: "3000"
  egress:
    - toEntities:
        - cluster
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
